--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,66 +1,8 @@
 jobs:
 - job:
-  displayName: ubuntu-16.04
+  displayName: windows-latest
   pool:
-    vmImage: 'ubuntu-16.04'
-  strategy:
-    matrix:
-      Python27:
-        python.version: '2.7'
-      Python36:
-        python.version: '3.6'
-
-  steps:
-  - bash: echo "##vso[task.prependpath]$CONDA/bin"
-    displayName: Add conda to PATH
-
-  - bash: conda create --yes --quiet --name myEnvironment
-    displayName: Create Anaconda environment
-
-  - bash: |
-      source activate myEnvironment
-      conda install --yes --quiet --name myEnvironment python=$PYTHON_VERSION numpy
-    displayName: Install Anaconda packages
-
-  - bash: |
-      source activate myEnvironment
-      pip install pytest pytest-azurepipelines
-      pytest
-    displayName: pytest
-
-- job:
-  displayName: macOS-10.13
-  pool:
-    vmImage: 'macOS-10.13'
-  strategy:
-    matrix:
-      Python27:
-        python.version: '2.7'
-      Python36:
-        python.version: '3.6'
-
-  steps:
-  - bash: echo "##vso[task.prependpath]$CONDA/bin"
-    displayName: Add conda to PATH
-
-  - bash: conda create --yes --quiet --name myEnvironment
-    displayName: Create Anaconda environment
-
-  - bash: |
-      source activate myEnvironment
-      conda install --yes --quiet --name myEnvironment python=$PYTHON_VERSION numpy
-      pip install pytest pytest-azurepipelines
-    displayName: Install Anaconda packages
-
-  - bash: |
-      source activate myEnvironment
-      pytest
-    displayName: pytest
-
-- job:
-  displayName: vs2017-win2016
-  pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: 'windows-latest'
   strategy:
     matrix:
       Python27:
@@ -89,7 +31,7 @@ jobs:
 - job:
   displayName: From environment.yml
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'windows-latest'
 
   steps:
   - bash: echo "##vso[task.prependpath]$CONDA/bin"
